app/dev/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nodejs-gitops-dev
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
  finalizers:
    - kubernetes
