app/dev/db_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  labels:
    app: nodejs-gitops
  annotations:
    description: Exposes the database server
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: postgresql
status:
  loadBalancer: {}
