app/dev/app.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    description: Defines how to deploy the application server
  name: nodejs-gitops
  labels:
    app: nodejs-gitops
    app.openshift.io/runtime: nodejs
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    #type: Recreate
    #recreateParams:
    #  timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    #- type: ImageChange
    #  imageChangeParams:
    #    automatic: true
    #    containerNames:
    #      - nodejs-gitops
    #    from:
    #      kind: ImageStreamTag
    #      #name: 'nodejs-gitops:main'
    #      name: 'nodejs-gitops:ab54eeb9f864e2878a5744263e7ce5a04a290e75'
    #      namespace: nodejs-gitops-pipeline
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: nodejs-gitops
  template:
    metadata:
      name: nodejs-gitops
      labels:
        app.openshift.io/runtime: nodejs
        name: nodejs-gitops
    spec:
      containers:
        - name: nodejs-gitops
          image: "image-registry.openshift-image-registry.svc:5000/foo/bar:latest"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
---
kind: Service
apiVersion: v1
metadata:
  name: nodejs-gitops
  labels:
    app: nodejs-gitops
  annotations:
    description: Exposes and load balances the application pods
    service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: nodejs-gitops
status:
  loadBalancer: {}
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-gitops
  labels:
    app: nodejs-gitops
spec:
  to:
    kind: Service
    name: nodejs-gitops
    weight: 100
  wildcardPolicy: None
